# xyz-local

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/xyz_local/: __init__.py  agent.py  config.py  main.py  memory.py  ollama_client.py  safety.py  tools.py  tui.py  ui.py
tests/: __init__.py  test_safety.py  test_tools.py
